# Pointcept

./: .gitignore  LICENSE  README.md  environment.yml  pred_npy_to_las.py  pred_to_las.py  pyproject.toml  realtime_3dp_cls_udp.py  setup_check.ipynb
.github/workflows/: formatter.yml
configs/_base_/: default_runtime.py
configs/concerto/: insseg-ptv3-large-v1m1-0a-scannet-pg-lin.py  insseg-ptv3-large-v1m1-0b-scannet-pg-dec.py  insseg-ptv3-large-v1m1-0c-scannet-pg-ft.py  insseg-ptv3-large-v1m1-1a-scannet200-pg-lin.py  insseg-ptv3-large-v1m1-1b-scannet200-pg-dec.py  insseg-ptv3-large-v1m1-1c-scannet200-pg-ft.py  insseg-ptv3-large-v1m1-2a-scannetpp-pg-lin.py  insseg-ptv3-large-v1m1-2b-scannetpp-pg-dec.py  insseg-ptv3-large-v1m1-2c-scannetpp-pg-ft.py  insseg-ptv3-large-v1m1-3a-s3dis-pg-lin.py  insseg-ptv3-large-v1m1-3b-s3dis-pg-dec.py  insseg-ptv3-large-v1m1-3c-s3dis-pg-ft.py  pretrain-concerto-v1m1-0-base.py  pretrain-concerto-v1m1-1-large-base.py  pretrain-concerto-v1m1-2-large-video.py  semseg-ptv3-base-v1m1-0a-scannet-lin.py  semseg-ptv3-base-v1m1-0c-scannet-dec.py  semseg-ptv3-base-v1m1-0c-scannet-ft.py  semseg-ptv3-base-v1m1-1a-scannet200-lin.py  semseg-ptv3-base-v1m1-1c-scannet200-dec.py  semseg-ptv3-base-v1m1-1c-scannet200-ft.py  (+50 more)
scripts/: ablate_tomato_gs2pc.sh  build_image.sh  convert_scannet_weight_for_tomato.py  create_tars.sh  summarize_ablation.py  test.sh  train.sh  train_tomato.sh
suggestions/: ChatGPT.md  gemini.md
tools/: create_waymo_semseg_submission.py  ddp_test.py  inference.py  slurm_status.py  test.py  test_s3dis_6fold.py  train.py
(+723 files in other folders)
